Adjusted BacktoTop hover

--- a/templates/liveSupport.html
+++ b/templates/liveSupport.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group mb-3 ">
                 <label for="inputRequest" class="form-label ">Enquiry</label>
-                <textarea class="form-control" id="inputRequest" rows="3" placeholder="Describe your enquire here"></textarea>
+                <textarea class="form-control" id="inputRequest" rows="3" placeholder="Describe your enquire here" style="max-height: 100px;"></textarea>
             </div>
             <div class="form-check mb-3 d-flex  justify-content-center ">
                 <input type="checkbox" class="form-check-input" id="checkAgree">
