required validation for enquiry

--- a/templates/liveSupport.html
+++ b/templates/liveSupport.html
@@ -20,27 +20,27 @@
             <div>
                 <h3 class="text-center">Enquiry Portal</h3>
             </div>
-            <div class="form-group mb-3 ">
-                <label for="inputName" class="form-label ">Name</label>
-                <input type="email" class="form-control" id="inputName" placeholder="Enter name">
+            <div class="form-group mb-3">
+                <label for="inputName" class="form-label">Name</label>
+                <input type="text" class="form-control" id="inputName" placeholder="Enter name" required>
             </div>
-            <div class="form-group mb-3 ">
-                <label for="inputEmail" class="form-label ">Email address</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="Enter email">
+            <div class="form-group mb-3">
+                <label for="inputEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" required>
             </div>
-            <div class="form-group mb-3 ">
-                <label for="inputRequest" class="form-label ">Enquiry</label>
-                <textarea class="form-control" id="inputRequest" rows="3" placeholder="Describe your enquire here" style="max-height: 100px;"></textarea>
+            <div class="form-group mb-3">
+                <label for="inputRequest" class="form-label">Enquiry</label>
+                <textarea class="form-control" id="inputRequest" rows="3" placeholder="Describe your enquiry here" style="max-height: 100px;" required></textarea>
             </div>
-            <div class="form-check mb-3 d-flex  justify-content-center ">
-                <input type="checkbox" class="form-check-input" id="checkAgree">
+            <div class="form-check mb-3 d-flex justify-content-center">
+                <input type="checkbox" class="form-check-input" id="checkAgree" required>
                 <label class="form-check-label" for="checkAgree">&nbsp;I agree to share these details for enquiry
                     purpose</label>
             </div>
-            <div class="d-flex justify-content-center ">
+            <div class="d-flex justify-content-center">
                 <button type="submit" class="btn btn-primary">Send Enquiry</button>
             </div>
-        </form>
+        </form>        
     </div>
 </main>
 <!-- End #main -->
