Done up to send email

--- a/templates/enquiryChat.html
+++ b/templates/enquiryChat.html
@@ -90,36 +90,45 @@
 <main>
     <div class="container">
 
+        {% if isSessionExist %}
         <h3 class="h3 mb-3 text-center ">Enquiry Chat Session</h3>
-
         <div class="card">
             <div class="row">
                 <div class="col-12">
                     <div class="chat-box position-relative">
                         <div class="chat-messages p-4">
+                            {% for r in chatRecords %}
+                            {% if r['sender'] != 'admin'%}
                             <div class="chat-message-right mb-4">
                                 <div>
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
                                         class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
-                                    <div class="text-muted small text-nowrap mt-2">2:43 am</div>
                                 </div>
                                 <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
-                                    <div class="font-weight-bold mb-1">You</div>
-                                    Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.
+                                    <div class="font-weight-bold mb-1">{{ r['sender'] }}</div>
+                                    {{ r['content'] }}
+                                    <div class="text-muted small text-nowrap mt-1">
+                                        {{ r['date'] }}&nbsp;{{ r['time'] }}
+                                    </div>
                                 </div>
                             </div>
-
+                            {% else %}
                             <div class="chat-message-left pb-4">
                                 <div>
                                     <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
                                         class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
-                                    <div class="text-muted small text-nowrap mt-2">2:44 am</div>
                                 </div>
                                 <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
-                                    <div class="font-weight-bold mb-1">Sharon Lessman</div>
-                                    Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.
+                                    <div class="font-weight-bold mb-1">{{ r['sender'] }}</div>
+                                    {{ r['content'] }}
+                                    <div class="text-muted small text-nowrap mt-1">
+                                        {{ r['date'] }}&nbsp;{{ r['time'] }}
+                                    </div>
                                 </div>
                             </div>
+                            {% endif %}
+                            {% endfor %}
+
                         </div>
                     </div>
 
@@ -133,5 +142,11 @@
                 </div>
             </div>
         </div>
+        {% else %}
+        <div>
+            Not exist
+        </div>
+        {% endif %}
+
     </div>
 </main>
