Done socketing client site

--- a/templates/enquiryChat.html
+++ b/templates/enquiryChat.html
@@ -31,16 +31,16 @@
         body {
             margin-top: 20px;
         }
-    
+
         .chat-online {
             color: #34ce57
         }
-    
+
         .chat-offline {
             color: #e4606d
         }
-    
-        .chat-box{
+
+        .chat-box {
             height: 500px;
         }
 
@@ -50,41 +50,41 @@
             height: inherit;
             overflow-y: scroll
         }
-    
+
         .chat-message-left,
         .chat-message-right {
             display: flex;
             flex-shrink: 0
         }
-    
+
         .chat-message-left {
             margin-right: auto
         }
-    
+
         .chat-message-right {
             flex-direction: row-reverse;
             margin-left: auto
         }
-    
+
         .py-3 {
             padding-top: 1rem !important;
             padding-bottom: 1rem !important;
         }
-    
+
         .px-4 {
             padding-right: 1.5rem !important;
             padding-left: 1.5rem !important;
         }
-    
+
         .flex-grow-0 {
             flex-grow: 0 !important;
         }
-    
+
         .border-top {
             border-top: 1px solid #dee2e6 !important;
         }
     </style>
-    
+
 </head>
 
 <main>
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="chat-box position-relative">
-                        <div class="chat-messages p-4">
+                        <div id="chat-messages" class="chat-messages p-4">
                             {% for r in chatRecords %}
                             {% if r['sender'] != 'admin'%}
                             <div class="chat-message-right mb-4">
@@ -134,8 +134,8 @@
 
                     <div class="flex-grow-0 py-3 px-4 border-top">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Type your message">
-                            <button class="btn btn-primary">Send</button>
+                            <input id="newMsg" type="text" class="form-control" placeholder="Type your message">
+                            <button id="sendBtn" class="btn btn-primary" onclick="sendMessage()">Send</button>
                         </div>
                     </div>
 
@@ -147,6 +147,56 @@
             Not exist
         </div>
         {% endif %}
-
     </div>
 </main>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+<script type="text/javascript">
+    var socket = io.connect("{{request.host_url}}");
+
+    socket.on('message', function (data) {
+        var messages = document.getElementById('chat-messages');
+        var messageContainer = document.createElement('div');
+
+        if (data.sender === 'admin') {
+            messageContainer.classList.add('chat-message-left', 'mb-4');
+            messageContainer.innerHTML = `
+                <div>
+                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                </div>
+                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                    <div class="font-weight-bold ml-1">${data.sender}</div>
+                    ${data.content}
+                    <div class="text-muted small text-nowrap mt-1">
+                        ${data.date}&nbsp;${data.time}
+                    </div>
+                </div>
+            `;
+        } else {
+            messageContainer.classList.add('chat-message-right', 'mb-4');
+            messageContainer.innerHTML = `
+                <div>
+                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                </div>
+                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                    <div class="font-weight-bold mb-1">${data['sender']}</div>
+                    ${data.content}
+                    <div class="text-muted small text-nowrap mt-1">
+                        ${data.date}&nbsp;${data.time}
+                    </div>
+                </div>
+            `;
+        }
+
+        messages.appendChild(messageContainer);
+    });
+
+    function sendMessage() {
+        var message_input = document.getElementById('newMsg');
+        var message = message_input.value;
+        socket.emit('message', { 'content': message, 'sender': "{{isSessionExist['userName']}}", 'requestId': "{{isSessionExist['chatId']}}" });
+        message_input.value = '';
+    }
+</script>
