--- a/templates/enquiryChat.html
+++ b/templates/enquiryChat.html
@@ -135,7 +135,7 @@
                     <div class="flex-grow-0 py-3 px-4 border-top">
                         <div class="input-group">
                             <input id="newMsg" type="text" class="form-control" placeholder="Type your message">
-                            <button id="sendBtn" class="btn btn-primary" onclick="sendMessage()">Send</button>
+                            <button id="sendBtn" class="btn btn-primary" onclick="sendMessage()" disabled >Send</button>
                         </div>
                     </div>
 
@@ -198,10 +198,23 @@
         messages.appendChild(messageContainer);
     });
 
+    var message_input = document.getElementById('newMsg');
+    var sendButton = document.getElementById('sendBtn');
     function sendMessage() {
-        var message_input = document.getElementById('newMsg');
         var message = message_input.value;
         socket.emit('message', { 'content': message, 'sender': "{{isSessionExist['userName']}}", 'requestId': "{{isSessionExist['chatId']}}" });
         message_input.value = '';
+        sendButton.disabled = true; // Disable the button if the input is empty
     }
+
+    message_input.addEventListener('input', function() {
+        var message = message_input.value.trim(); // Remove leading and trailing whitespace
+
+        if (message === '') {
+            sendButton.disabled = true; // Disable the button if the input is empty
+        } else {
+            sendButton.disabled = false; // Enable the button if there is input
+        }
+    });
+
 </script>
